--- a/apps/todo-app/index.html
+++ b/apps/todo-app/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>web-api demo</title>
+    <title>keyval demo</title>
     <base href="/" />
-
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="./logo192.png" />
+
+    <link rel="manifest" href="./manifest.json" />
   </head>
   <body>
     <div id="root"></div>
